# smart-diff

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  smart_diff.py  system_prompt.txt
examples/: SpecificAtomics_ICD_v2.docx  SpecificAtomics_InterfaceNotes.txt  Warthrop_SignalDefinitions.xlsx  prompt_example.txt
html/: report_template.html
